# todo_webapp_rs

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  proxy.conf  run.sh
migrations/: 20240121094321_todos_table.up.sql  20240124034002_todos_table.up.sql  20240127161528_todos_table.up.sql
src/: db_actions.rs  lib.rs  main.rs  schemes.rs
src/db_actions/: create_conn.rs  crud.rs
src/schemes/: appstate.rs  request.rs  todo.rs
