[package]
name = "todo_webapp_rs"
version = "0.1.0"
edition = "2021"
authors = ["privath"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
serde = { version = "1.0.195", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["mysql", "chrono", "runtime-tokio-native-tls"] }
tokio = { version = "1.35.1", features = ["full"] }
